--- a/web/pom.xml
+++ b/web/pom.xml
@@ -9,9 +9,8 @@
   </parent>
   <groupId>ch.protonmail.vladyslavbond.quizzing</groupId>
   <artifactId>web</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
-  <name>web Jersey Webapp</name>
+  <name>web</name>
   <properties>
     <jersey.version>1.19</jersey.version>
     <glassfish.version>3.1.1</glassfish.version>
@@ -20,6 +19,16 @@
   <dependencies>
     <dependency>
       <artifactId>controllers</artifactId>
+      <groupId>ch.protonmail.vladyslavbond.quizzing</groupId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <artifactId>domain</artifactId>
+      <groupId>ch.protonmail.vladyslavbond.quizzing</groupId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <artifactId>util</artifactId>
       <groupId>ch.protonmail.vladyslavbond.quizzing</groupId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
