Completed task creation with persistence and updating descriptions of tasks, as well as GUI for this. May be it's time to keep track on the issues, for there are a lot of smelly code.

--- a/datasource/pom.xml
+++ b/datasource/pom.xml
@@ -9,4 +9,11 @@
     <groupId>ch.protonmail.vladyslavbond.quizzing</groupId>
     <artifactId>datasource</artifactId>
     <name>datasource</name>
+    <dependencies>
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>9.4-1200-jdbc4</version>
+      </dependency>
+    </dependencies>
 </project>
